--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "astro": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.338.0",
     "react": "^18.2.0",
