--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@astrojs/check": "^0.5.5",
     "@astrojs/react": "^3.0.10",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.3.3",
+    "@auth/core": "^0.18.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
     "astro": "^4.4.4",
+    "auth-astro": "^4.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-autoplay": "^8.0.0",
