--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.3",
     "@auth/core": "^0.18.6",
+    "@formkit/auto-animate": "^0.8.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
