--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@auth/core": "^0.18.6",
     "@formkit/auto-animate": "^0.8.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@trpc/client": "^11.0.0-next-beta.294",
+    "@trpc/server": "^11.0.0-next-beta.294",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
     "astro": "^4.4.4",
@@ -31,6 +33,10 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.22"
   }
 }
