feat: Add drizzle config

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "db:push": "drizzle-kit push:mysql",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@astrojs/check": "^0.5.5",
@@ -15,7 +17,9 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.3",
     "@auth/core": "^0.18.6",
+    "@auth/drizzle-adapter": "^0.7.0",
     "@formkit/auto-animate": "^0.8.1",
+    "@planetscale/database": "^1.16.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@trpc/client": "^11.0.0-next-beta.294",
     "@trpc/server": "^11.0.0-next-beta.294",
@@ -25,6 +29,8 @@
     "auth-astro": "^4.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.29.4",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.338.0",
@@ -37,6 +43,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.22"
+    "@types/node": "^20.11.22",
+    "drizzle-kit": "^0.20.14"
   }
 }
