--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@formkit/auto-animate": "^0.8.1",
     "@planetscale/database": "^1.16.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.24.1",
     "@trpc/client": "^11.0.0-next-beta.294",
+    "@trpc/next": "^11.0.0-next-beta.294",
+    "@trpc/react-query": "^11.0.0-next-beta.294",
     "@trpc/server": "^11.0.0-next-beta.294",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
@@ -34,6 +37,7 @@
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.338.0",
+    "mysql2": "^3.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1",
