--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@auth/drizzle-adapter": "^0.7.0",
     "@formkit/auto-animate": "^0.8.1",
     "@planetscale/database": "^1.16.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.24.1",
     "@trpc/client": "^11.0.0-next-beta.294",
