--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.22",
+    "@vite-pwa/assets-generator": "^0.2.4",
+    "@vite-pwa/astro": "^0.3.0",
     "drizzle-kit": "^0.20.14"
   }
 }
