--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
         "./src/*"
       ]
     },
+    "types": [
+      "vite-plugin-pwa/client",
+      "vite-plugin-pwa/info"
+    ],
     "jsx": "react-jsx",
     "jsxImportSource": "react"
   }
